[tool.poetry]
name = "cookie-checker"
version = "0.1.0"
description = "Программа позволяющая чекать куки на валид :D"
authors = ["molodost vnutri"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.36"
aiofiles = "^24.1.0"
aiohttp = "^3.11.10"
bs4 = "^0.0.2"
pydantic-settings = "^2.7.0"
regex = "^2024.11.6"
loguru = "^0.7.3"
aiosqlite = "^0.20.0"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
